nueva tabla de sql de isnumos
se mejoro la tabla y esta funcional

--- a/fronted/public/views/insumos/crear_inusomo.html
+++ b/fronted/public/views/insumos/crear_inusomo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Datos Insumo</title>
+  <title>Crear Insumo</title>
   <link rel="stylesheet" href="/fronted/public/css/main.css">
   <script src="/fronted/public/views/components/header.js" defer></script>
   <script src="/fronted/public/js/insumo/enviar.js" defer></script>
@@ -11,28 +11,28 @@
 <body>
   <header class="header"></header>
   <main class="form-container">
-    <form class="form">
+    <form class="form" action="http://localhost:3000/insumo" method="POST">
       <h2 class="form__title">Datos Insumos</h2>
       <div class="form__row">
         <div class="form__column">
           <label class="form__label">Cargar imagen</label>
-          <input class="form__input form__input--imagen" type="file" name="image" id="image">
-          <label class="form__label">ID insumo</label>
-          <input class="form__input insumo__input--ID" type="text" name="idInsumo">
+          <input class="form__input form__input--imagen" type="file">
           <label class="form__label">Tipo insumo</label>
-          <input class="form__input insumo__input--type" type="text" name="tipoInsumo">
+          <input class="form__input insumo__input--type" type="text">
           <label class="form__label">Nombre insumo</label>
-          <input class="form__input insumo__input--nombre" type="text" name="nombreInsumo">
+          <input class="form__input insumo__input--nombre" type="text">
           <label class="form__label">Unidad de medida</label>
-          <input class="form__input cultivo__input--size" type="text" name="unidadMedida">
+          <input class="form__input cultivo__input--size" type="text">
+          <label class="form__label">Cantidad</label>
+          <input class="form__input insumo__input--cantidad" type="number">
         </div>
         <div class="form__column">
-          <label class="form__label">Cantidad</label>
-          <input class="form__input insumo__input--cantidad" type="text" name="cantidad">
           <label class="form__label">Valor unitario</label>
-          <input class="form__input insumo__input--unitario" type="text" name="valorUnitario">
+          <input class="form__input insumo__input--unitario" type="number">
+          <label class="form__label">Valor Total</label>
+          <input class="form__input insumo__input--total" type="number">
           <label class="form__label">Descripción</label>
-          <input class="form__input insumo__input--descripcion" type="text" name="descripcion">
+          <input class="form__input insumo__input--descripcion" type="text">
           <label class="form__label">Estado (activo / inactivo)</label>
           <select name="estado" class="form__input insumo__input--estado">
             <option value="">Seleccione una opción</option>
