--- a/fronted/public/views/insumos/usar.html
+++ b/fronted/public/views/insumos/usar.html
@@ -74,7 +74,7 @@
                             <option value="insumo2">Insumo 2</option>
                             <option value="insumo3">Insumo 3</option>
                         </select>
-                        <button><a href="/fronted/public/views/insumos/crear_inusomo.html">Crear Insumo</a></button>
+                        <button><a href="/fronted/public/views/insumos/crear_inusomo.html">+ Crear Insumo</a></button>
                     </div> 
     
                 </div> <button class="formulario__boton" type="submit">Crear Uso Insumo </button>
