--- a/fronted/public/views/vizualisar/html/crear_asociacion.html
+++ b/fronted/public/views/vizualisar/html/crear_asociacion.html
@@ -35,11 +35,6 @@
                 </p>
     
                 <div class="formulario__grid">
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Responsable</label>
-                        <input type="text" class="formulario__entrada formulario__entrada--responsable" placeholder="Responsable">
-                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">Agregar</a></button>
-                    </div>
     
                     <div class="formulario__columna">
                         <label class="formulario__etiqueta">Nombre Asociación</label>
@@ -65,6 +60,12 @@
                         <label class="formulario__etiqueta">Fin Produccion</label>
                         <input type="date" class="formulario__entrada formulario__entrada--fin" placeholder="Meta Gana">
                     </div>
+
+                    <div class="formulario__columna">
+                        <label class="formulario__etiqueta">Responsable</label>
+                        <input type="text" class="formulario__entrada formulario__entrada--responsable" placeholder="Responsable">
+                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">+ Agregar</a></button>
+                    </div>
     
                     <div class="formulario__columna">
     
@@ -75,7 +76,7 @@
                             <option value="cultivo2">Cultivo 2</option>
                             <option value="cultivo3">Cultivo 3</option>
                         </select>
-                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">Crear Cultivo</a></button>
+                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">+ Crear Cultivo</a></button>
                     </div>
     
     
@@ -88,7 +89,7 @@
                             <option value="sensor2">Sensor 2</option>
                             <option value="sensor3">Sensor 3</option>
                         </select>
-                        <button><a href="/fronted/public/views/sensores/crear_sensor.html">Crear Sensor</a></button>
+                        <button><a href="/fronted/public/views/sensores/crear_sensor.html">+ Crear Sensor</a></button>
                     </div>
     
                     <div class="formulario__columna">
@@ -100,7 +101,7 @@
                             <option value="insumo2">Insumo 2</option>
                             <option value="insumo3">Insumo 3</option>
                         </select>
-                        <button><a href="/fronted/public/views/insumos/usar.html">Usar Insumo</a></button>
+                        <button><a href="/fronted/public/views/insumos/usar.html">+ Usar Insumo</a></button>
                     </div>
     
                     <div class="formulario__columna">
@@ -111,7 +112,7 @@
                             <option value="ciclo2">Ciclo 2</option>
                             <option value="ciclo3">Ciclo 3</option>
                         </select>
-                        <button><a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html">Crear
+                        <button><a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html">+ Crear
                                 Ciclo</a></button>
                     </div>
                     <div></div>
