--- a/fronted/public/css/pages/visualizar/crear-asociacion.css
+++ b/fronted/public/css/pages/visualizar/crear-asociacion.css
@@ -218,6 +218,7 @@ body {
     transition: background-color 0.3s ease;
     display: block;
     margin: var(--espacio-3) auto 0;
+    margin-top: var(--espacio-6);
     width: 100%;
     max-width: 20rem;
     border: solid 0.1rem var(--black);
@@ -310,7 +311,7 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--white);
+    color: var(--black);
 }
 
 .formulario__grid {
@@ -325,12 +326,17 @@ a {
 button {
     border: solid 0.1rem var(--black);
     cursor: pointer;
-    background-color: var(--primary-600);
-    padding: 1rem;
+    background-color: var(--white);
+    padding: 0.5rem;
     border-radius: 0.5rem;
     font-size: var(--fs-xs);
     margin: 0.5rem;
     width: 15rem;
+    color: var(--black);
+}
+
+button:hover {
+    background-color: var(--primary-400);
     color: var(--white);
 }
 
