--- a/fronted/public/views/usuarios/registrar.html
+++ b/fronted/public/views/usuarios/registrar.html
@@ -37,20 +37,20 @@
                 </select>
 
                 <label class="form__label" for="numeroDocumento">Número del Documento</label>
-                <input type="text" id="numeroDocumento" name="numeroDocumento" class="form__input form__input--id" required>
+                <input type="text" id="numeroDocumento" name="numeroDocumento" class="form__input form__input--id">
 
                 <label class="form__label" for="nombre">Nombre</label>
-                <input type="text" id="nombre" name="nombre" class="form__input form__input--name" required>
+                <input type="text" id="nombre" name="nombre" class="form__input form__input--name">
 
                 <label class="form__label" for="correo">Correo Electrónico</label>
-                <input type="email" id="correo" name="correo" class="form__input form__input--email" required>
+                <input type="email" id="correo" name="correo" class="form__input form__input--email" >
 
             </div>
 
             <div class="form__column">
 
                 <label class="form__label" for="confirmarCorreo">Confirmar Correo</label>
-                <input type="email" id="confirmarCorreo" name="confirmarCorreo" class="form__input form__input--email" required>
+                <input type="email" id="confirmarCorreo" name="confirmarCorreo" class="form__input form__input--email">
 
                 <label class="form__label" for="telefono">Número de Teléfono</label>
                 <input type="tel" id="telefono" name="telefono" class="form__input form__input--phone">
