Ya esta todo lo de uso de insumos
100%

--- a/fronted/public/views/insumos/actualizar_uso_insumo.html
+++ b/fronted/public/views/insumos/actualizar_uso_insumo.html
@@ -34,38 +34,38 @@
 
             <div class="formulario__grid">
                 <div class="formulario__columna">
-                    <label for="fecha-uso" class="formulario__etiqueta">Fecha Uso</label>
-                    <input type="date" id="fecha-uso" name="fecha-uso" class="formulario__entrada formulario__entrada--fecha" required />
+                    <label class="formulario__etiqueta">Fecha Uso</label>
+                    <input type="date" name="fecha-uso" class="formulario__entrada formulario__entrada--fecha" required />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="cantidad" class="formulario__etiqueta">Cantidad</label>
-                    <input type="number" id="cantidad" name="cantidad" class="formulario__entrada formulario__entrada--cantidad" required min="1" />
+                    <label class="formulario__etiqueta">Cantidad</label>
+                    <input type="number" name="cantidad" class="formulario__entrada formulario__entrada--cantidad" required min="1" />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="responsable" class="formulario__etiqueta">Responsable</label>
-                    <input type="text" id="responsable" name="responsable" class="formulario__entrada formulario__entrada--responsable" required />
+                    <label class="formulario__etiqueta">Responsable</label>
+                    <input type="text" name="responsable" class="formulario__entrada formulario__entrada--responsable" required />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="valor-unitario" class="formulario__etiqueta">Valor Unitario</label>
-                    <input type="number" id="valor-unitario" name="valor-unitario" class="formulario__entrada formulario__entrada--valorUnitario" step="0.01" required />
+                    <label class="formulario__etiqueta">Valor Unitario</label>
+                    <input type="number" name="valor-unitario" class="formulario__entrada formulario__entrada--valorUnitario" step="0.01" required />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="valor-total" class="formulario__etiqueta">Valor Total</label>
-                    <input type="number" id="valor-total" name="valor-total" class="formulario__entrada formulario__entrada--valorTotal" step="0.01" readonly />
+                    <label class="formulario__etiqueta">Valor Total</label>
+                    <input type="number" name="valor-total" class="formulario__entrada formulario__entrada--valorTotal" step="0.01" readonly />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="observaciones" class="formulario__etiqueta">Observaciones</label>
-                    <input type="text" id="observaciones" name="observaciones" class="formulario__entrada formulario__entrada--observaciones" />
+                    <label class="formulario__etiqueta">Observaciones</label>
+                    <input type="text" name="observaciones" class="formulario__entrada formulario__entrada--observaciones" />
                 </div>
 
                 <div class="formulario__columna">
-                    <label for="insumo" class="formulario__etiqueta">Insumos</label>
-                    <select id="insumo" name="insumo" class="formulario__selector formulario__selector--insumo" required>
+                    <label class="formulario__etiqueta">Insumos</label>
+                    <select name="insumo" class="formulario__selector formulario__selector--insumo" required>
                         <option value="">Seleccione un insumo</option>
                         <option value="insumo1">Insumo 1</option>
                         <option value="insumo2">Insumo 2</option>
