--- a/fronted/public/views/insumos/ver_datos_uso_insumo.html
+++ b/fronted/public/views/insumos/ver_datos_uso_insumo.html
@@ -73,7 +73,7 @@
       </div>
 
       <!-- Botón que redirige a un enlace -->
-      <a href="listar_uso de insumos.html" class="formulario__boton">Ver Detalles</a>
+      <a href="/fronted/public/views/insumos/actualizar_uso_insumo.html" class="formulario__boton">Actualizar</a>
     </form>
   </main>
 </body>
