--- a/fronted/public/views/insumos/listar_uso de insumos.html
+++ b/fronted/public/views/insumos/listar_uso de insumos.html
@@ -42,7 +42,7 @@
                         <td>$300.00</td> 
                         <td>Aplicado en el lote 1</td> 
                         <td>
-                            <a href="datos_inusomo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="ver_datos_uso_insumo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -54,7 +54,7 @@
                         <td>$1,000.00</td> 
                         <td>Sembrado en el lote 2</td> 
                         <td>
-                            <a href="datos_inusomo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="ver_datos_uso_insumo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -66,7 +66,7 @@
                         <td>$250.00</td> 
                         <td>Usado para control de plagas</td> 
                         <td>
-                            <a href="datos_inusomo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="ver_datos_uso_insumo.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
