Aqui no paso nada
Aqui no pasa nada

--- a/fronted/public/views/sensores/Lectura_sensor.html
+++ b/fronted/public/views/sensores/Lectura_sensor.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
     <header class="header">
-        <h1 class="header__title">Mi Aplicación</h1>
+        <h1 class="header__title">LEMBO SGL</h1>
     </header>
     <main class="reading-data">
         <h2 class="reading-data__title">Lectura de Datos del Sensor</h2>
