--- a/fronted/public/views/vizualisar/html/listar_asociaciones.html
+++ b/fronted/public/views/vizualisar/html/listar_asociaciones.html
@@ -64,7 +64,7 @@
                         <td>Operario de Insumos</td>
                         <td>Completado</td>
                         <td>
-                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="/fronted/public/views/sensores/datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                         
@@ -78,7 +78,7 @@
                         <td>Biólogo Agrónomo</td>
                         <td>En curso</td>
                         <td>
-                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="/fronted/public/views/sensores/datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -91,7 +91,7 @@
                         <td>Técnico de Mantenimiento</td>
                         <td>Completado</td>
                         <td>
-                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="/fronted/public/views/sensores/datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
