Nada que ver aqui
 NADA QUE VER AQUI

--- a/fronted/public/views/vizualisar/html/listar_asociaciones.html
+++ b/fronted/public/views/vizualisar/html/listar_asociaciones.html
@@ -51,7 +51,7 @@
                         <td>Técnico de Campo</td>
                         <td>Completado</td>
                         <td>
-                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="/fronted/public/views/sensores/datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
@@ -104,7 +104,7 @@
                         <td>Jefe de Cultivo</td>
                         <td>Pendiente</td>
                         <td>
-                            <a href="datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
+                            <a href="/fronted/public/views/sensores/datos_sensor.html"><button class="btn btn-outline btn-sm">Editar</button></a>
                             <button class="btn btn-danger btn-sm">Eliminar</button>
                         </td>
                     </tr>
