--- a/fronted/public/views/vizualisar/html/crear_asociacion.html
+++ b/fronted/public/views/vizualisar/html/crear_asociacion.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -12,7 +13,8 @@
 <body class="pagina">
     <header class="cabecera">
         <div class="cabecera__logo">
-            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA" class="cabecera__logo-img">
+            <img src="/fronted/public/img/logo-de-Sena-sin-fondo-Blanco-300x300.png" alt="Logo SENA"
+                class="cabecera__logo-img">
         </div>
         <nav class="cabecera__nav">
             <a href="/fronted/public/views/homes/index.html" class="cabecera__enlace">Inicio</a>
@@ -23,107 +25,103 @@
             <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
             <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
         </nav>
-        
     </header>
-    
-    <nav class="cabecera__nav">
-       
-        <main class="asociacion">
-            <form class="formulario" action="http://localhost:3000/asociaciones" method="POST"> <h1 class="asociacion__titulo">Crear Asociación</h1>
-                <p class="asociacion__descripcion">
-                    Ingrese la información para crear una nueva asociación
-                </p>
-    
-                <div class="formulario__grid">
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Nombre Asociación</label>
-                        <input type="text" class="formulario__entrada formulario__entrada--nombre" placeholder="Nombre Asociación">
-                    </div>
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Inversión</label>
-                        <input type="number" class="formulario__entrada formulario__entrada--inversion" placeholder="Inversión">
-                    </div>
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Meta</label>
-                        <input type="number" class="formulario__entrada formulario__entrada--meta" placeholder="Meta">
-                    </div>
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Inicio Produccion</label>
-                        <input type="date" class="formulario__entrada formulario__entrada--inicio" placeholder="Meta Gana">
-                    </div>
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Fin Produccion</label>
-                        <input type="date" class="formulario__entrada formulario__entrada--fin" placeholder="Meta Gana">
-                    </div>
 
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Responsable</label>
-                        <input type="text" class="formulario__entrada formulario__entrada--responsable" placeholder="Responsable">
-                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">+ Agregar</a></button>
-                    </div>
-    
-                    <div class="formulario__columna">
-    
-                        <label class="formulario__etiqueta">Cultivo</label>
-                        <select class="formulario__selector formulario__selector--cultivo">
-                            <option value="">Seleccione un cultivo</option>
-                            <option value="cultivo1">Cultivo 1</option>
-                            <option value="cultivo2">Cultivo 2</option>
-                            <option value="cultivo3">Cultivo 3</option>
-                        </select>
-                        <button><a href="/fronted/public/views/cultivo/crear_cultivo.html">+ Crear Cultivo</a></button>
-                    </div>
-    
-    
-                    <div class="formulario__columna">
-    
-                        <label class="formulario__etiqueta">Sensores</label>
-                        <select class="formulario__selector formulario__selector--sensor">
-                            <option value="">Agregar Sensores</option>
-                            <option value="sensor1">Sensor 1</option>
-                            <option value="sensor2">Sensor 2</option>
-                            <option value="sensor3">Sensor 3</option>
-                        </select>
-                        <button><a href="/fronted/public/views/sensores/crear_sensor.html">+ Crear Sensor</a></button>
-                    </div>
-    
-                    <div class="formulario__columna">
-    
-                        <label class="formulario__etiqueta">Insumos</label>
-                        <select class="formulario__selector formulario__selector--insumo">
-                            <option value="">Agregar Insumos</option>
-                            <option value="insumo1">Insumo 1</option>
-                            <option value="insumo2">Insumo 2</option>
-                            <option value="insumo3">Insumo 3</option>
-                        </select>
-                        <button><a href="/fronted/public/views/insumos/usar.html">+ Usar Insumo</a></button>
-                    </div>
-    
-                    <div class="formulario__columna">
-                        <label class="formulario__etiqueta">Ciclo Cultivo</label>
-                        <select class="formulario__selector formulario__selector--ciclo-cultivo">
-                            <option value="">Agregar Ciclo Cultivo</option>
-                            <option value="ciclo1">Ciclo 1</option>
-                            <option value="ciclo2">Ciclo 2</option>
-                            <option value="ciclo3">Ciclo 3</option>
-                        </select>
-                        <button><a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html">+ Crear
-                                Ciclo</a></button>
-                    </div>
-                    <div></div>
-                    <div class="formulario__columna">
-                        <button class="formulario__boton" type="submit">Crear Asociación</button>
-                    </div>
-                </div> 
-            </form>
-        </main> 
-        </main>
-    
-    </body>
-    
+    <main class="asociacion">
+        <form class="formulario" action="http://localhost:3000/asociaciones" method="POST">
+            <h1 class="asociacion__titulo">Crear Asociación</h1>
+            <p class="asociacion__descripcion">
+                Ingrese la información para crear una nueva asociación
+            </p>
+
+            <div class="formulario__grid">
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Nombre Asociación</label>
+                    <input type="text" class="formulario__entrada formulario__entrada--nombre"
+                        placeholder="Nombre Asociación">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Inversión</label>
+                    <input type="number" class="formulario__entrada formulario__entrada--inversion"
+                        placeholder="Inversión">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Meta</label>
+                    <input type="number" class="formulario__entrada formulario__entrada--meta" placeholder="Meta">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Inicio Produccion</label>
+                    <input type="date" class="formulario__entrada formulario__entrada--inicio"
+                        placeholder="Meta Gana">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Fin Produccion</label>
+                    <input type="date" class="formulario__entrada formulario__entrada--fin" placeholder="Meta Gana">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Responsable</label>
+                    <input type="text" class="formulario__entrada formulario__entrada--responsable"
+                        placeholder="Responsable">
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Cultivo</label>
+                    <select class="formulario__selector formulario__selector--cultivo">
+                        <option value="">Seleccione un cultivo</option>
+                    </select>
+                    <button type="button">
+                        <a href="/fronted/public/views/cultivo/crear_cultivo.html"
+                            style="text-decoration: none; color: inherit;">+ Crear Cultivo</a>
+                    </button>
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Sensores</label>
+                    <select class="formulario__selector formulario__selector--sensor">
+                        <option value="">Agregar Sensores</option>
+                    </select>
+                    <button type="button">
+                        <a href="/fronted/public/views/sensores/crear_sensor.html"
+                            style="text-decoration: none; color: inherit;">+ Crear Sensor</a>
+                    </button>
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Insumos</label>
+                    <select class="formulario__selector formulario__selector--insumo">
+                        <option value="">Agregar Insumos</option>
+                    </select>
+                    <button type="button">
+                        <a href="/fronted/public/views/insumos/crear_uso_insumo.html"
+                            style="text-decoration: none; color: inherit;">+ Usar Insumo</a>
+                    </button>
+                </div>
+
+                <div class="formulario__columna">
+                    <label class="formulario__etiqueta">Ciclo Cultivo</label>
+                    <select class="formulario__selector formulario__selector--ciclo-cultivo">
+                        <option value="">Agregar Ciclo Cultivo</option>
+                    </select>
+                    <button type="button">
+                        <a href="/fronted/public/views/ciclo_cultivo/crear_ciclo_cultivo.html"
+                            style="text-decoration: none; color: inherit;">+ Crear Ciclo</a>
+                    </button>
+                </div>
+                <div></div>
+                <div class="formulario__columna">
+                    <button class="formulario__boton" type="submit">Crear Asociación</button>
+                </div>
+                <div class="formulario__columna">
+                    <button class="formulario__boton--cancelar" type="button" onclick="window.close();">Cerrar</button>
+                </div>
+            </div>
+        </form>
+    </main>
+</body>
+
 </html>
