--- a/fronted/public/css/pages/visualizar/styleprac.css
+++ b/fronted/public/css/pages/visualizar/styleprac.css
@@ -39,10 +39,7 @@ html {
     font-family: var(--fuente-principal);
     scroll-behavior: smooth;
     height: 100%;
-    /* Permitir el scroll vertical cuando sea necesario */
-    overflow-y: auto;
-    /* Evitar el scroll horizontal a menos que el contenido lo requiera */
-    overflow-x: hidden;
+    overflow:scroll;
 }
 
 body {
@@ -50,10 +47,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* Permitir el scroll vertical cuando sea necesario */
-    overflow-y: auto;
-    /* Evitar el scroll horizontal a menos que el contenido lo requiera */
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .pagina {
@@ -67,7 +61,6 @@ body {
 .principal {
     padding: var(--espacio-3);
     flex-grow: 1;
-    /* Permitir el scroll dentro del contenido principal si es necesario */
     overflow: auto;
 }
 
@@ -280,15 +273,6 @@ body {
 
 .info-contenido__texto {
     font-size: var(--tam-fuente-xxs);
-}
-.formulario__mensaje-error {
-    color: red;
-    font-size: 0.8em; /* O un tamaño que prefieras */
-    margin-top: 0.2em; /* Espacio pequeño entre el input y el mensaje */
-}
-
-.formulario__entrada--error {
-    border: 1px solid red; /* O un estilo que prefieras para el borde con error */
 }
 
 /* Diseño Responsivo para Estilo Infografía */
