--- a/fronted/public/views/vizualisar/html/crear_asociacion.html
+++ b/fronted/public/views/vizualisar/html/crear_asociacion.html
@@ -79,6 +79,7 @@
                             style="text-decoration: none; color: inherit;">+ Crear Cultivo</a>
                     </button>
                 </div>
+                <!-- hola -->
 
                 <div class="formulario__columna">
                     <label class="formulario__etiqueta">Sensores</label>
